--- a/test/inputFILE.in
+++ b/test/inputFILE.in
@@ -1,7 +1,7 @@
  &VARIABLES
- DT      =  0.100000000000000     ,
+ DT      =  0.0500000000000000     ,
  BETA    =   100.000000000000     ,
- NSTEP   =         100,
+ NSTEP   =         200,
  U       =   2.00000000000000     ,
  TS      =   1.00000000000000     ,
  EPS     =  5.000000000000000E-002,
@@ -10,20 +10,19 @@
  LKREDUCED       =         300,
  NLOOP   =          20,
  EQNLOOP =          30,
- BATH_TYPE       = pgflat          ,
+ BATH_TYPE       = flat          ,
  VBATH   =  0.100000000000000     ,
  WBATH   =   20.0000000000000     ,
  WALPHA  =   0.1d0
  WGAP    =   5.00000000000000     ,
- EFIELD  =   2.00000000000000     ,
- FIELD_TYPE      = dc              ,
+ EFIELD  =   0.5d0
+ FIELD_TYPE      = pulse              ,
  EX      =   1.00000000000000     ,
  EY      =  0.000000000000000E+000,
- T0      =  0.000000000000000E+000,
+ T0      =  2.000000000000000E+000,
  T1      =   1000000000.00000     ,
- TAU0    =  0.000000000000000E+000,
- W0      =  0.000000000000000E+000,
- OMEGA0  =  0.785398163397448     ,
+ Ncycles = 4
+ OMEGA0  =  4.d0
  E1      =  0.000000000000000E+000,
  NX      =          10,
  NY      =          10,
