--- a/test/inputFILE.in
+++ b/test/inputFILE.in
@@ -1,31 +1,22 @@
  &VARIABLES
- DT      =  0.200000000000000     ,
+ DT      =  0.100000000000000     ,
  BETA    =   100.000000000000     ,
- NSTEP   =         500,
+ NSTEP   =         100,
  U       =   0.00000000000000     ,
  TS      =   1.00000000000000     ,
  EPS     =  5.000000000000000E-002,
- L       =        8192,
- LTAU    =         200,
- LKREDUCED       =         300,
+ L       =        1000,
  NLOOP   =          100,
  EQNLOOP =          30,
  BATH_TYPE       = flat          ,
- VBATH   =  0.0500000000000000     ,
+ VBATH   =  0.100000000000000     ,
  WBATH   =   20.0000000000000     ,
- WALPHA  =   0.1d0
- WGAP    =   5.00000000000000     ,
- EFIELD  =   0.05d0
+ EFIELD  =   5.d0
  FIELD_TYPE      = dc              ,
  EX      =   1.00000000000000     ,
  EY      =  0.000000000000000E+000,
- T0      =  0.000000000000000E+000,
- T1      =   1000000000.00000     ,
- Ncycles = 4
- OMEGA0  =  4.d0
- E1      =  0.000000000000000E+000,
- NX      =          10,
- NY      =          10,
+ NX      =          20,
+ NY      =          20,
  EPS_ERROR       =  1.000000000000000E-004,
  NSUCCESS        =           2,
  WEIGHT  =   1.00000000000000     ,
@@ -35,6 +26,4 @@
  FCHI    = F,
  IRDSFILE        = restartSigma                    ,
  IRDNKFILE       = restartNk                       ,
- DATA_DIR        = DATAneq                         ,
- PLOT_DIR        = PLOT                            
  /
