--- a/test/inputFILE.in
+++ b/test/inputFILE.in
@@ -2,30 +2,21 @@
  DT      =  0.1d0
  BETA    =   100.000000000000     ,
  NSTEP   =         100,
- U       =  0.000000000000000E+000,
+ U       =   0.00000000000000     ,
  TS      =   1.00000000000000     ,
  EPS     =  5.000000000000000E-002,
  L       =        2000,
- LTAU    =         200,
- LKREDUCED       =         300,
- NLOOP   =           1,
+ NLOOP   =          100,
  EQNLOOP =          30,
- BATH_TYPE       = gapflat          ,
+ BATH_TYPE       = flat          ,
  VBATH   =  0.100000000000000     ,
  WBATH   =   10.0000000000000     ,
- WALPHA  =   1.00000000000000     ,
- WGAP    =   5.00000000000000     ,
- EFIELD  =   0.0000000000000     ,
+ EFIELD  =   5.d0
  FIELD_TYPE      = dc              ,
  EX      =   1.00000000000000     ,
  EY      =  0.000000000000000E+000,
- T0      =  0.000000000000000E+000,
- T1      =   1000000000.00000     ,
- NCYCLES =           1,
- OMEGA0  =   3.14159265358979     ,
- E1      =  0.000000000000000E+000,
- NX      =          15,
- NY      =          15,
+ NX      =          20,
+ NY      =          20,
  EPS_ERROR       =  1.000000000000000E-004,
  NSUCCESS        =           2,
  WEIGHT  =   1.00000000000000     ,
@@ -33,9 +24,6 @@
  SOLVE_EQ        = F,
  PLOT3D  = T,
  FCHI    = F,
- FUPDATE =           0,
  IRDSFILE        = restartSigma                    ,
  IRDNKFILE       = restartNk                       ,
- DATA_DIR        = DATAneq                         ,
- PLOT_DIR        = PLOT                            
  /
